# MCustomRecordingStrip

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/jinye/demo/jidub/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/headFile/: Ji_add.cpp  Ji_add.h
app/src/main/java/jinye/demo/jidub/: MainActivity.java
app/src/main/java/jinye/demo/jidub/custom/: MCustomDynamiclyricsView.java  MCustomRecordDragView.java
app/src/main/java/jinye/demo/jidub/model/: JyLyricsModel.java  MRecordScaleModel.java  MScalePointModel.java
app/src/main/jni/: jinye_demo_jidub_MainActivity.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/jinye/demo/jidub/: ExampleUnitTest.java
dynamiclyrics/src/androidTest/java/jinye/demo/dynamiclyrics/: ExampleInstrumentedTest.java
dynamiclyrics/src/main/: AndroidManifest.xml
dynamiclyrics/src/main/java/jinye/demo/dynamiclyrics/: LyricsReader.java
dynamiclyrics/src/main/java/jinye/demo/dynamiclyrics/formats/: LyricsFileReader.java  LyricsFileWriter.java
dynamiclyrics/src/main/java/jinye/demo/dynamiclyrics/formats/hrc/: HrcLyricsFileReader.java  HrcLyricsFileWriter.java
dynamiclyrics/src/main/java/jinye/demo/dynamiclyrics/formats/krc/: KrcLyricsFileReader.java  KrcLyricsFileWriter.java
dynamiclyrics/src/main/java/jinye/demo/dynamiclyrics/model/: LyricsInfo.java  LyricsLineInfo.java  LyricsTag.java  TranslateLrcLineInfo.java
dynamiclyrics/src/main/java/jinye/demo/dynamiclyrics/utils/: CharUtils.java  ColorUtils.java  FileUtils.java  LyricsIOUtils.java  LyricsUtils.java  StringCompressUtils.java  StringUtils.java  TimeUtils.java
dynamiclyrics/src/main/java/jinye/demo/dynamiclyrics/widget/: AbstractLrcView.java  FloatLyricsView.java  ManyLyricsView.java
dynamiclyrics/src/main/res/values/: strings.xml
dynamiclyrics/src/test/java/jinye/demo/dynamiclyrics/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
